Добавляю команды в make файл.

--- a/services/content-actions-service/docker-compose.content-actions.yml
+++ b/services/content-actions-service/docker-compose.content-actions.yml
@@ -5,7 +5,7 @@ services:
   content-actions-api:
     build:
       context: .
-      dockerfile: ./src/Dockerfile
+      dockerfile: ./src/Dockerfile.spare
     env_file:
       - ../../.env
     ports:
