--- a/infra/elk/config/logstash.conf
+++ b/infra/elk/config/logstash.conf
@@ -25,6 +25,23 @@ filter {
       }
     }
 
+    # Обработка Kafka логов с бинарными данными
+    if [message] =~ /kafka\.protocol\.parser/ or [message] =~ /ProduceRequest/ {
+      mutate {
+        add_tag => ["kafka_log"]
+        add_field => { "log_category" => "kafka" }
+      }
+
+      # Упрощаем Kafka сообщения, убирая бинарные данные
+      mutate {
+        gsub => [
+          "message", "\\\\x[0-9a-fA-F]{2}", "[HEX]",
+          "message", "records=b'[^']*'", "records=[BINARY_DATA]",
+          "message", "b'\\\\x[^']*'", "[BINARY_DATA]"
+        ]
+      }
+    }
+
     # Добавляем метаданные контейнера
     mutate {
       add_field => {
@@ -62,6 +79,11 @@ filter {
         add_tag => ["python_traceback"]
         replace => { "log_level" => "ERROR" }
       }
+    }
+
+    # Обработка русских символов - обеспечиваем UTF-8
+    mutate {
+      convert => { "message" => "string" }
     }
 
     # Clean up fields
