--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,9 @@ POSTGRES_PASSWORD=postgres
 ##KIBANA
 KIBANA_PORT=5601
 
+##KIBANA-LOGS
+KIBANA_LOGS_EXTERNAL_PORT=5602
+
 ##NGINX
 NGINX_PORT=80
 
@@ -27,6 +30,14 @@ NGINX_PORT=80
 ELASTIC_HOST=elasticsearch
 ELASTIC_PORT=9200
 
+##ELASTIC-LOGS
+ELASTIC_LOGS_HOST=elasticsearch-logs
+ELASTIC_LOGS_EXTERNAL_PORT=9201
+ELASTIC_LOGS_PORT=9200
+
+##LOGSTASH
+LOGSTASH_HOST=logstash
+LOGSTASH_PORT=5044
 
 AUTH_SECRET_KEY=eCWelzcn3Evoetllt6qPMHPZFT8T5vgJ
 YANDEX_CLIENT_SECRET=<секретный код клиента Яндекс>
@@ -78,6 +89,7 @@ MONGODB_NAME=kinoservice
 MONGODB_LIKE_COLL=likeCollection
 MONGODB_BOOKMARK_COLL=bookmarkCollection
 MONGODB_REVIEWS_COLL=reviewsCollection
+
 #------------------------------------------------------------------------------
 # ПЕРЕМЕННЫЕ ДЛЯ ТЕСТОВ
 
