--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,50 @@ on:
     branches: [ "main" ]
 
 jobs:
+
+  test-version-python:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        python-version: [3.11, 3.13]
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Download docker-compose
+      run: |
+        sudo curl -L "https://github.com/docker/compose/releases/download/v2.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+        sudo chmod +x /usr/local/bin/docker-compose
+        docker-compose --version
+
+    - name: Installing missing components for testing
+      run: mv .env.example .env
+
+    - name: Tests version python
+      run: make test-async-api-ci PYTHON_VERSION=${{ matrix.python-version }}
+
+  test-lint:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8==7.2.0 wemake-python-styleguide==1.1.0 mypy==1.16.0
+
+      - name: Test lint
+        run: |
+          flake8 services/content-actions-service --max-line-length=100 --extend-ignore=E203,W503,C812,C813,C814,C815S,C816,WPS300,WPS111 --select=WPS
+          mypy services/content-actions-service
+
   build-and-test:
     runs-on: ubuntu-latest
 
@@ -15,13 +59,13 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Установка docker-compose
+    - name: Download docker-compose
       run: |
         sudo curl -L "https://github.com/docker/compose/releases/download/v2.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
         sudo chmod +x /usr/local/bin/docker-compose
         docker-compose --version
 
-    - name: Установка недостающих компонентов для тестирования
+    - name: Installing missing components for testing
       run: |
         mv .env.example .env
         mkdir -p services/auth-service/src/core/keys
@@ -30,11 +74,11 @@ jobs:
         chmod 600 services/auth-service/src/core/keys/private.pem
         chmod 644 services/auth-service/src/core/keys/public.pem
 
-    - name: Прогон тестов metrics-service
+    - name: Start tests metrics-service
       run: make test-metrics-service-ci
 
-    - name: Прогон тестов auth-api
+    - name: Start tests auth-api
       run: make test-auth-api-ci
 
-    - name: Прогон тестов async-api
+    - name: Start tests async-api
       run: make test-async-api-ci
