--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ kafka-python = "^2.2.10"
 pyjwt = ">=2.9.0,<2.10.0"
 flask-limiter = "^3.12"
 wemake-python-styleguide = "^1.1.0"
+mypy = "1.16.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = ">=4.1.0,<5.0.0"
