--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -80,6 +80,19 @@ repos:
           - setuptools<81.0.0
         args:
           - "--max-line-length=100"
-          - "--extend-ignore=E203,W503,C812,C813,C814,C815S,C816,WPS300,WPS111,WPS431"
+          - "--extend-ignore=E203,W503,C812,C813,C814,C815S,C816,WPS300,WPS111,WPS431,WPS226,WPS110,WPS404,WPS601,WPS237"
           - "--select=WPS"
         files: ^services/content-actions-service
+
+  # - repo: https://github.com/pre-commit/mirrors-mypy
+  #   rev: v1.13.0
+  #   hooks:
+  #     - id: mypy
+  #       name: mypy-content-actions-service
+  #       args: [
+  #         "--strict",
+  #         "--config-file=pyproject.toml",
+  #         "--no-implicit-reexport",
+  #       ]
+  #       files: ^services/content-actions-service/.*\.py$
+  #       additional_dependencies: [mypy==1.13.0]
