--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,12 +42,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8==7.2.0 wemake-python-styleguide==1.1.0 mypy==1.16.0
+          pip install flake8==7.2.0 wemake-python-styleguide==1.1.0 mypy==1.16.0 flake8-html
 
       - name: Test lint
         run: |
-          flake8 services/content-actions-service --max-line-length=100 --extend-ignore=E203,W503,C812,C813,C814,C815S,C816,WPS300,WPS111 --select=WPS
-          mypy services/content-actions-service
+          flake8 services/content-actions-service --max-line-length=100 --extend-ignore=E203,W503,C812,C813,C814,C815S,C816,WPS300,WPS111,WPS431,WPS226,WPS110,WPS404,WPS601,WPS237 --select=WPS --format=html --htmldir=flake-report
 
   build-and-test:
     runs-on: ubuntu-latest
@@ -82,3 +81,21 @@ jobs:
 
     - name: Start tests async-api
       run: make test-async-api-ci
+
+    - name: Send Telegram notification
+      if: success()
+      needs: build
+      uses: appleboy/telegram-action@v0.3.1
+      with:
+        to: ${{ secrets.TELEGRAM_CHAT_ID }}
+        token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+        message: "Pipeline completed successfully for the branch ${{ github.ref }}!"
+
+    - name: Send Telegram notification
+      if: failure()
+      needs: build
+      uses: appleboy/telegram-action@v0.3.1
+      with:
+        to: ${{ secrets.TELEGRAM_CHAT_ID }}
+        token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+        message: "Pipeline completed failure for the branch ${{ github.ref }}! "
