--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,20 +82,26 @@ jobs:
     - name: Start tests async-api
       run: make test-async-api-ci
 
-    - name: Send Telegram notification
-      if: success()
-      needs: build
-      uses: appleboy/telegram-action@v0.3.1
-      with:
-        to: ${{ secrets.TELEGRAM_CHAT_ID }}
-        token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-        message: "Pipeline completed successfully for the branch ${{ github.ref }}!"
+  notify-success:
+    runs-on: ubuntu-latest
+    needs: [test-version-python, test-lint, build-and-test]  # Зависит от всех предыдущих задач
+    if: success()  # Выполняется только при успехе
+    steps:
+      - name: Send Telegram notification
+        uses: appleboy/telegram-action@v0.3.1
+        with:
+          to: ${{ secrets.TELEGRAM_CHAT_ID }}
+          token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          message: "Pipeline completed successfully for the branch ${{ github.ref }}!"
 
-    - name: Send Telegram notification
-      if: failure()
-      needs: build
-      uses: appleboy/telegram-action@v0.3.1
-      with:
-        to: ${{ secrets.TELEGRAM_CHAT_ID }}
-        token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-        message: "Pipeline completed failure for the branch ${{ github.ref }}! "
+  notify-failure:
+    runs-on: ubuntu-latest
+    needs: [test-version-python, test-lint, build-and-test]  # Зависит от всех предыдущих задач
+    if: failure()  # Выполняется только при провале
+    steps:
+      - name: Send Telegram notification
+        uses: appleboy/telegram-action@v0.3.1
+        with:
+          to: ${{ secrets.TELEGRAM_CHAT_ID }}
+          token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          message: "Pipeline completed failure for the branch ${{ github.ref }}!"
