Изменяю структуру CI

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,5 +64,6 @@ exclude = [
     "migration",
     "migrations",
     "services/auth-service/src/migration",
-    "services/auth-service/src/migrations"
+    "services/auth-service/src/migrations",
+    "services/admin-panel/src/accounts/migrations"
 ]
