--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,28 +6,6 @@ on:
 
 jobs:
 
-  test-version-python:
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        python-version: [3.11, 3.13]
-
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Download docker-compose
-      run: |
-        sudo curl -L "https://github.com/docker/compose/releases/download/v2.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-        sudo chmod +x /usr/local/bin/docker-compose
-        docker-compose --version
-
-    - name: Installing missing components for testing
-      run: mv .env.example .env
-
-    - name: Tests version python
-      run: make test-async-api-ci PYTHON_VERSION=${{ matrix.python-version }}
-
   test-lint:
     runs-on: ubuntu-latest
 
@@ -42,14 +20,25 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8==7.2.0 wemake-python-styleguide==1.1.0 mypy==1.16.0 flake8-html
+          pip install flake8==7.2.0 wemake-python-styleguide==1.1.0 flake8-html
 
       - name: Test lint
         run: |
           flake8 services/content-actions-service --max-line-length=100 --extend-ignore=E203,W503,C812,C813,C814,C815S,C816,WPS300,WPS111,WPS431,WPS226,WPS110,WPS404,WPS601,WPS237 --select=WPS --format=html --htmldir=flake-report
 
+      - name: Upload flake8 report  # выгружает отчеты по flake8
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: flake8-html-report
+          path: flake-report/
+
   build-and-test:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        python-version: [3.12, 3.13]
 
     env:
       PUBLIC_KEY: ${{ secrets.PUBLIC_KEY }}
@@ -74,13 +63,13 @@ jobs:
         chmod 644 services/auth-service/src/core/keys/public.pem
 
     - name: Start tests metrics-service
-      run: make test-metrics-service-ci
+      run: make test-metrics-service-ci PYTHON_VERSION=${{ matrix.python-version }}
 
     - name: Start tests auth-api
-      run: make test-auth-api-ci
+      run: make test-auth-api-ci PYTHON_VERSION=${{ matrix.python-version }}
 
     - name: Start tests async-api
-      run: make test-async-api-ci
+      run: make test-async-api-ci PYTHON_VERSION=${{ matrix.python-version }}
 
   notify-success:
     runs-on: ubuntu-latest
