--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -84,15 +84,14 @@ repos:
           - "--select=WPS"
         files: ^services/content-actions-service
 
-  # - repo: https://github.com/pre-commit/mirrors-mypy
-  #   rev: v1.13.0
-  #   hooks:
-  #     - id: mypy
-  #       name: mypy-content-actions-service
-  #       args: [
-  #         "--strict",
-  #         "--config-file=pyproject.toml",
-  #         "--no-implicit-reexport",
-  #       ]
-  #       files: ^services/content-actions-service/.*\.py$
-  #       additional_dependencies: [mypy==1.13.0]
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.13.0
+    hooks:
+      - id: mypy
+        name: mypy-content-actions-service
+        args: [
+          "--config-file=pyproject.toml",
+          "--no-implicit-reexport",
+        ]
+        files: ^services/content-actions-service/src/.*\.py$
+        additional_dependencies: [mypy==1.13.0]
