Задаю базовую структуру под api reviews

--- a/.env.example
+++ b/.env.example
@@ -89,6 +89,7 @@ MONGODB_NAME=kinoservice
 MONGODB_LIKE_COLL=likeCollection
 MONGODB_BOOKMARK_COLL=bookmarkCollection
 MONGODB_REVIEWS_COLL=reviewsCollection
+MONGODB_REVIEWS_LIKE_COLL=reviewslikeCollection
 
 #------------------------------------------------------------------------------
 # ПЕРЕМЕННЫЕ ДЛЯ ТЕСТОВ
