--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ pyjwt = ">=2.9.0,<2.10.0"
 flask-limiter = "^3.12"
 wemake-python-styleguide = "^1.1.0"
 uvicorn = "^0.34.3"
+dotenv = "^0.9.9"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = ">=4.1.0,<5.0.0"
