--- a/docs/compare-mongodb-vs-postgres/research/Dockerfile
+++ b/docs/compare-mongodb-vs-postgres/research/Dockerfile
@@ -14,22 +14,12 @@ RUN curl -sSL https://install.python-poetry.org | python3 - \
 
 ENV PATH="/root/.local/bin:${PATH}"
 
-COPY services/auth-service/src/pyproject.toml services/auth-service/src/poetry.lock ./
-
-# Копируем libs и собираем на месте
-COPY libs/auth_utils /opt/app/libs/auth_utils
-RUN cd /opt/app/libs/auth_utils && poetry build && cd /opt/app && poetry add libs/auth_utils
-
-COPY libs/tracer_utils /opt/app/libs/tracer_utils
-RUN cd /opt/app/libs/tracer_utils && poetry build && cd /opt/app && poetry add libs/tracer_utils
-
-COPY libs/rate_limite_utils /opt/app/libs/rate_limite_utils
-RUN cd /opt/app/libs/rate_limite_utils && poetry build && cd /opt/app && poetry add libs/rate_limite_utils
+COPY research/pyproject.toml research/poetry.lock ./
 
 RUN poetry install --only main
 
-COPY services/auth-service/src/ .
+COPY research/ .
 
-RUN chmod +x ./scripts/entrypoint.sh
+RUN chmod +x ./start_research.sh
 
-CMD ["./scripts/entrypoint.sh"]
+CMD ["./start_research.sh"]
