Добавлена валидация film_id и вайтлист

--- a/.env.example
+++ b/.env.example
@@ -78,6 +78,10 @@ MONGODB_NAME=kinoservice
 MONGODB_LIKE_COLL=likeCollection
 MONGODB_BOOKMARK_COLL=bookmarkCollection
 MONGODB_REVIEWS_COLL=reviewsCollection
+
+#content-actions-service
+FILM_VALIDATION_URL="http://async-api/async/api/v1/films/{film_id}"
+
 #------------------------------------------------------------------------------
 # ПЕРЕМЕННЫЕ ДЛЯ ТЕСТОВ
 
