--- a/services/content-actions-service/src/pyproject.toml
+++ b/services/content-actions-service/src/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "gunicorn>=23.0.0,<24.0.0",
     "aiohttp (>=3.11.18,<4.0.0)",
     "motor>=3.7.1,<3.8.0",
-    "beanie>=1.29.0,<2.0.0"
+    "beanie>=1.29.0,<2.0.0",
+    "ujson (>=5.10.0,<6.0.0)"
 ]
 
 [project.optional-dependencies]
