Реализую CRUD по рецензиям

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,6 +125,8 @@ services:
       postgres:
         condition: service_healthy
     restart: always
+    ports:
+      - 8000:8000
     healthcheck:
       test: [
         "CMD-SHELL",
