Добавляю запуск тевтов content-api в docker

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ LOG_LOG_LEVEL=DEBUG
 #DOCKER
 ##REDIS
 REDIS_HOST=redis
+# REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_DB=0
 REDIS_PASSWORD=Parol123
@@ -140,6 +141,10 @@ TEST_ASYNCAPI__PORT=8000
 TEST_AUTHAPI__HOST=auth-api-container
 # TEST_AUTHAPI__HOST=localhost
 TEST_AUTHAPI__PORT=8000
+
+# TEST_CONTENT_API (ContentAPI)
+TEST_CONTENTAPI__HOST=content-actions-api-container
+TEST_CONTENTAPI__PORT=8000
 
 ##NGINX
 TEST_NGINX_PORT=80
