--- a/services/content-actions-service/src/pyproject.toml
+++ b/services/content-actions-service/src/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "motor>=3.7.1,<3.8.0",
     "beanie>=1.29.0,<2.0.0",
     "ujson (>=5.10.0,<6.0.0)",
-    "types-ujson (>=5.10.0.20250326,<6.0.0.0)"
+    "types-ujson (>=5.10.0.20250326,<6.0.0.0)",
+    "backoff (==2.2.1)"
 ]
 
 [project.optional-dependencies]
