--- a/docs/compare-mongodb-vs-postgres/research/pyproject.toml
+++ b/docs/compare-mongodb-vs-postgres/research/pyproject.toml
@@ -6,6 +6,7 @@ requires-python = ">=3.12,<4.0"
 dependencies = [
     "asyncpg>=0.30.0,<1.0.0",
     "psycopg2>=2.9.10,<3.0.0",
+    "psycopg>=3.2.9",
     "motor>=3.7.1,<3.8.0",
     "python-dotenv>=1.1.0,<2.0.0",
     "pydantic-settings>=2.8.1,<3.0.0",
