--- a/infra/mongodb/docker-compose.mongodb.yml
+++ b/infra/mongodb/docker-compose.mongodb.yml
@@ -169,6 +169,8 @@ services:
       - BOOKMARK_COLL=${MONGODB_BOOKMARK_COLL}
       - REVIEWS_COLL=${MONGODB_REVIEWS_COLL}
     depends_on:
+      mongodb_router:
+        condition: service_started
       mongodb_sh1_rep1:
         condition: service_healthy
       mongodb_sh1_rep2:
