Добавляю структуру compose под glitch

--- a/.env.example
+++ b/.env.example
@@ -94,6 +94,18 @@ MONGODB_BOOKMARK_COLL=bookmarkCollection
 MONGODB_REVIEWS_COLL=reviewsCollection
 MONGODB_REVIEWS_LIKE_COLL=reviewslikeCollection
 
+GLITCHTTIP_POSTGRES_DB=postgres
+GLITCHTTIP_POSTGRES_NAME=postgres
+GLITCHTTIP_POSTGRES_PASSWORD=postgres
+GLITCHTTIP_URL_DB=postgres://postgres:postgres@glitchtip-postgres:5432/postgres
+GLITCHTIP_URL_REDIS=redis://glitchtip-redis:6379/0
+GLITCHTIP_SECRET_KEY=XoCtZEnDObD9_SQRZ885hJg2wVOBuQcKM_d8NHzjPNEc5tDUCyaFDTkj1ufkQy4us2s
+GLITCHTIP_URL_DOMAIN=http://localhost:8005
+# позволяет оправлять события в консоль, можно настроить на отправку email smtp://user:pass@smtp.gmail.com:587
+GLITCHTIP_URL_EMAIL=consolemail://
+# адрес эл почты, так как грузим в консоль то это необязательный параметр
+GLITCHTIP_EMAIL=noreply@localhost
+GLITCHTIP_URL=<ваш url>
 
 #content-actions-service
 FILM_VALIDATION_URL="http://async-api:8000/async/api/v1/films/{film_id}"
