--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 include:
+  - ./infra/glitchtip/docker-compose.glitchtip.yml
   - ./infra/kafka/docker-compose.kafka.yaml
   - ./infra/elk/docker-compose.elk.yml
   - ./infra/clickhouse/docker-compose.clickhouse.yml
