--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,6 +125,8 @@ services:
       postgres:
         condition: service_healthy
     restart: always
+    ports:
+      - 8000:8000
     healthcheck:
       test: [
         "CMD-SHELL",
@@ -158,13 +160,15 @@ services:
       - ./.env
     cpus: "1"
     mem_limit: 256M
+    ports:
+      - 8001:8000
     depends_on:
       mongodb_init:
         condition: service_completed_successfully
       redis:
         condition: service_healthy
-      async-api:
-        condition: service_started
+      # async-api:
+      #   condition: service_started
     restart: always
 
   admin-panel:
@@ -194,8 +198,6 @@ services:
     volumes:
       - pg_data_volume:/var/lib/postgresql/data
       - ./backup/postgres_dump-auth/dumps:/dumps
-    ports:
-      - "5432:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
       interval: 10s
