Завершяю настройку glitchtip

--- a/.env.example
+++ b/.env.example
@@ -105,7 +105,7 @@ GLITCHTIP_URL_DOMAIN=http://localhost:8005
 GLITCHTIP_URL_EMAIL=consolemail://
 # адрес эл почты, так как грузим в консоль то это необязательный параметр
 GLITCHTIP_EMAIL=noreply@localhost
-GLITCHTIP_URL=<ваш url>
+GLITCHTIP_URL=<ваш url>    # пример http://8a1960e7185f4431af9f52d521a9c03d@glitchtip-web:8000/1
 
 #content-actions-service
 FILM_VALIDATION_URL="http://async-api:8000/async/api/v1/films/{film_id}"
