Тюнингую запуск GlitchTip

--- a/infra/nginx/configs/site.conf
+++ b/infra/nginx/configs/site.conf
@@ -1,60 +1,55 @@
-# Определение upstream'ов с fallback на localhost (всегда доступен)
-upstream async-api-upstream {
-    server async-api:8000 max_fails=3 fail_timeout=10s;
-    server 127.0.0.1:9999 backup;  # backup сервер (недоступен, но не вызывает ошибку запуска)
-}
-
-upstream auth-api-upstream {
-    server auth-api:8000 max_fails=3 fail_timeout=10s;
-    server 127.0.0.1:9999 backup;
-}
-
-upstream admin-panel-upstream {
-    server admin-panel:8000 max_fails=3 fail_timeout=10s;
-    server 127.0.0.1:9999 backup;
-}
-
-upstream metric-api-upstream {
-    server metric-api:8000 max_fails=3 fail_timeout=10s;
-    server 127.0.0.1:9999 backup;
-}
-
-upstream content-actions-api-upstream {
-    server content-actions-api:8000 max_fails=3 fail_timeout=10s;
-    server 127.0.0.1:9999 backup;
-}
+# Resolver для динамического разрешения имён (127.0.0.11 - Docker DNS)
+resolver 127.0.0.11 valid=10s ipv6=off;
 
 server {
     listen       80 default_server;
     listen       [::]:80 default_server;
     server_name  _;
 
-    # Общий обработчик ошибок для всех сервисов
+    # Общие таймауты для всех проксируемых запросов
+    proxy_connect_timeout 5s;
+    proxy_send_timeout 10s;
+    proxy_read_timeout 10s;
+    proxy_buffering off;
+
+    # Общий обработчик ошибок
     error_page 502 503 504 @service_unavailable;
 
     location /async/ {
-        proxy_pass http://async-api-upstream/async/;
+        set $backend "async-api:8000";
+        proxy_pass http://$backend;
     }
 
-    # Проксирование запросов к /auth/* на auth-api
     location /auth/ {
-        proxy_pass http://auth-api-upstream/auth/;
+        set $backend "auth-api:8000";
+        proxy_pass http://$backend;
     }
 
     location /admin/ {
-        proxy_pass http://admin-panel-upstream/admin/;
-    }
-
-    location /metrics/ {
-        proxy_pass http://metric-api-upstream/metrics/;
-    }
-
-    location /content-api/ {
-        proxy_pass http://content-actions-api-upstream/content-api/;
+        set $backend "admin-panel:8000";
+        proxy_pass http://$backend;
     }
 
     location /about/ {
-        proxy_pass http://admin-panel-upstream/about/;
+        set $backend "admin-panel:8000";
+        proxy_pass http://$backend;
+    }
+
+    location /metrics/ {
+        set $backend "metric-api:8000";
+        proxy_pass http://$backend;
+    }
+
+    location /content-api/ {
+        set $backend "content-actions-api:8000";
+        proxy_pass http://$backend;
+
+        # Добавляем заголовки для отладки
+        proxy_set_header X-Original-URI $request_uri;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Логирование проксирования
+        access_log /dev/stdout main;
     }
 
     location /static/ {
@@ -62,22 +57,34 @@ server {
         try_files $uri =404;
     }
 
-    # Общий fallback для недоступных сервисов
+    # Общий обработчик для недоступных сервисов
     location @service_unavailable {
-        return 503 '{"error": "Service temporarily unavailable", "timestamp": "$time_iso8601", "request_uri": "$request_uri"}';
+        return 503 '{"error": "Service temporarily unavailable", "uri": "$request_uri", "backend": "$upstream_addr"}';
         add_header Content-Type application/json;
         add_header Retry-After 30;
     }
 
+    # Health check endpoint
+    location /health {
+        access_log off;
+        return 200 '{"status": "ok"}';
+        add_header Content-Type application/json;
+    }
+
     # Возвращать 404 для всех остальных запросов
     location / {
-        return 404;
+        return 404 '{"error": "Not found"}';
+        add_header Content-Type application/json;
     }
 
     error_page  404              /404.html;
-
     error_page   500 502 503 504  /50x.html;
+
     location = /50x.html {
+        root   html;
+    }
+
+    location = /404.html {
         root   html;
     }
 }
