--- a/.env.example
+++ b/.env.example
@@ -52,7 +52,10 @@ TRACE_PERCENT=1.0
 
 ##APP_TRACING
 ##Включение/Выключение трассировки
-TRACING=True
+TRACING=False
+
+##APP_GLITCH_TIP
+IS_GLITCHTIP_ENABLED=False
 
 ###DJANGO
 DJANGO_SECRET_KEY=3m(jzmjkpzg@ej5q2qx)%ctw+q8wv02&=7ad@xbo*vkrs2r_
